2017-12-19  Kirit Saelensminde  <kirit@felspar.com>
 Make `nullable<f5::u8view>` coercions from JSON not throw errors if the value isn't a string.

2017-12-18  Kirit Saelensminde  <kirit@felspar.com>
 Improve the jcursor APIs to better support u8view and move semantics.

2017-12-11  Kirit Saelensminde  <kirit@felspar.com>
 Add f5::lstring as an option for storage inside `fostlib::json`.

2017-12-06  Kirit Saelensminde  <kirit@felspar.com>
 Control characters need to be escaped when producing JSON strings.

2017-11-08  Kirit Saelensminde  <kirit@felspar.com>
 Can now mint a JWT with an initial payload.

2017-09-17  Kirit Saelensminde  <kirit@felspar.com>
 Remove uses of `boost::function` and make `worker` `const` sane.

2017-08-21  Kirit Saelensminde  <kirit@felspar.com>
 Add missing namespaces to the log definition macros.

2017-08-19  Kirit Saelensminde  <kirit@felspar.com>
 Small readability improvement to the default stdout logger.

2017-08-11  Kirit Saelensminde  <kirit@felspar.com>
 Crypto hashes now take a `f5::u8view` which should remove some memory allocations.

2017-07-18  Kirit Saelensminde  <kirit@felspar.com>
 Deprecate `fostlib::utf::u8_view` in favour of `f5::u8view`

2017-07-17  Kirit Saelensminde  <kirit@felspar.com>
 Move `utf::u8_view` to f5-cord.

2017-07-16  Kirit Saelensminde  <kirit@felspar.com>
 Remove `array_view` and replace with `f5::array_view` from f5-cord.

2017-05-31  Kirit Saelensminde  <kirit@felspar.com>
 * Fix generation of log messages from JSON where the modules are an array.
 * Count the number of times an exception has been absorbed.
*  Deprecate use of the `fostlib::string` JSON coercion in favour of `utf::u8_view`.

2017-05-29  Kirit Saelensminde  <kirit@felspar.com>
 Remove `variant` for storing atoms in `json`

2017-05-11  Kirit Saelensminde  <kirit@felspar.com>
 Don't print empty objects in the log stream.

2017-05-07  Kirit Saelensminde  <kirit@felspar.com>